test/fail/typesize/infinite-struct.ditto
struct Huge is
    int  give_me_a_bit;
    Huge give_me_more;
end